--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -1,4 +1,4 @@
 “There is only one heroism in the world: to see the world as it is, and to love it.”
 <!-- start custom footer snippets -->
-<a href="/sitemap/">Sitemap</a>
+<!--<a href="/sitemap/">Sitemap</a> -->
 <!-- end custom footer snippets -->
